fix css Home page

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,5 @@
 .home_window {
-    background: url(bg.jpg) no-repeat;
+    background: url(./tbs_4.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
 }
