--- a/src/components/home/text.css
+++ b/src/components/home/text.css
@@ -7,6 +7,7 @@
     min-height: 40px;
     margin-top: 81px;
     padding-bottom: 20px;
+    padding-top: 20px;
     background: rgba(48, 66, 105, 0.8);
     border-radius: 5px 5px 0 0;
 }
