--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -130,6 +130,7 @@
     font-size: 14px;
     line-height: 20px;
     margin: 0;
+    text-transform: uppercase;
 }
 
 .bodyTopDriverInfoRideMobail {
