--- a/src/components/Places/PlacesCountryInfo.css
+++ b/src/components/Places/PlacesCountryInfo.css
@@ -1,19 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700');
-
-.placesCountryInfo{
+.placesCountryInfo {
     width: 100%;
     height: 50%;
-    padding: 5% 10% 1% 10%;
+    margin: 5% 10% 1% 10%;
     text-align: center;
     color: #fff;
+    background: rgba(44, 66, 108, 0.8);
 }
-.placesCountryInfo_countryName{
+
+.placesCountryInfo_countryName {
     text-align: center;
     font-size: 48px;
     font-family: "Roboto Slab";
     font-weight: bold;
 }
-.placesCountryInfo_countryName::after{
+
+.placesCountryInfo_countryName::after {
     content: "";
     display: block;
     width: 10%;
@@ -21,47 +23,48 @@
     /*vertical-align: middle;*/
     border-bottom: 3px solid #ff6600;
 }
+
+
 /* .placesCountryInfo_line{
     width: 100px;
     height: 100px;
     background-color: black;
     border-bottom: 1px solid #ff6600;
 } */
-.placesCountryInfo_countryinfo{
-    font-size: 14px;
 
-    font-weight: 400; 
+.placesCountryInfo_countryinfo {
+    font-size: 14px;
+    font-weight: 400;
 }
-.placesCountryInfo_countryData{
+
+.placesCountryInfo_countryData {
     display: flex;
     flex-direction: row;
     width: 100%;
     padding-top: 2%;
 }
-.placesCountryInfo_countryData_element{
+
+.placesCountryInfo_countryData_element {
     display: flex;
     flex-direction: column;
-    
     width: 14%;
     height: 100%;
     padding: 0 2%;
 }
-.countryData_element_icon{
+
+.countryData_element_icon {
     padding: 0 25%;
     display: flex;
 }
-.countryData_element_text{
+
+.countryData_element_text {
     text-align: center;
     display: flex;
-
     font-size: 12px;
     font-weight: 300;
     margin-top: 5%;
 }
-.countryData_element_text text{
-    
 
-}
-.countryData_textStyle{
-    
-}
+.countryData_element_text text {}
+
+.countryData_textStyle {}
