--- a/src/components/Places/PlacesCountryInfo.css
+++ b/src/components/Places/PlacesCountryInfo.css
@@ -2,7 +2,9 @@
 .placesCountryInfo {
     width: 100%;
     height: 50%;
-    margin: 5% 10% 1% 10%;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 5px;
     text-align: center;
     color: #fff;
     background: rgba(44, 66, 108, 0.8);
