--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -31,11 +31,12 @@
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.25);
 }
 
-.block_element_left {
+
+/* .block_element_left {
     align-items: center;
     width: 470px;
-    border-right: 1px solid black;
-}
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+} */
 
 .block_element_right {
     width: 355px;
@@ -50,6 +51,11 @@
     display: flex;
     width: 156px;
     height: 156px;
+}
+
+.block_element_photo img {
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .myHeart {
