--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -23,9 +23,9 @@
 }
 
 .errorColor {
-    outline: 2px solid #a5252580 !important;
-    outline-offset: -4px !important;
-    background: #a5252580!important;
+    outline-color:  #a5252580 !important;
+
+    border-color: #a5252580 !important;
 }
 .tourContent .imageLabelError{
     color: #e81123;
