--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -99,45 +99,50 @@
 .driverInfo_informationIcon {
     position: inherit;
     top: 0px;
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    cursor: pointer;
     background-position: top center;
+    background-repeat: no-repeat !important;
 }
 
 .driverInfo_informationIcon:hover .driverInfo_informationBlock {
-    /*display: block;*/
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-    color: rgba(0, 0, 0, 1);
+    z-index: 6;
+    opacity: 1;
 }
 
-.driverInfo_informationIcon:hover .driverInfo_comfortIconStyle {
-    visibility: visible;
-}
+
+/* .driverInfo_informationIcon:hover .driverInfo_comfortIconStyle {
+    height: 15px;
+} */
 
 .driverInfo_informationBlock {
     position: absolute;
-    /*display: none;*/
+    z-index: 0;
+    /* display: none; */
     top: 30px;
-    left: -101px;
     width: 220px;
-    background-color: rgba(255, 255, 255, 0);
+    left: 20%;
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     padding: 5px;
     border-radius: 5px;
-    color: rgba(0, 0, 0, 0);
-    transition: 0.3s all;
+    transition: all 0.6s;
 }
 
 .driverInfo_comfortIconStyle {
-    visibility: hidden;
+    position: relative;
     width: 15px;
     height: 15px;
+    transition: all 0.6s;
 }
 
 .driverInfo_comfortTextStyle {
     margin: auto 0 auto 8px;
-    width: 185px;
     font-size: 12px;
+    color: #686868;
 }
 
 .driverInfo_carTypeValue {
