--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -1,7 +1,6 @@
 .block_element_infoBlock {
     justify-content: space-between;
     height: 100%;
-    width: 320px;
     padding: 0 33px;
     color: #304269;
 }
@@ -30,3 +29,14 @@
 .infoString_driverInfoSize {
     width: 80px;
 }
+
+@media (max-width: 990px) {
+    .block_element_infoBlock {
+        justify-content: space-between;
+        height: 100%;
+        padding: 0 5px;
+        color: #304269;
+    }
+}
+
+@media (max-width: 586px) {}
