--- a/src/components/home/HomeBody/Search.css
+++ b/src/components/home/HomeBody/Search.css
@@ -4,6 +4,8 @@
     top: 38px;
     left: 0px;
     color: black;
+    background: #fff;
+    border-radius: 5px;
 }
 
 .searchDropdownDriverInformation {
