--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -279,6 +279,14 @@
     background: rgba(37, 165, 154, 0.5)!important;
 }
 
+.startCity-CheckInput i {
+    cursor: pointer;
+    width: 15px !important;
+    height: 15px !important;
+    background: url(./pictures/close.svg) no-repeat !important;
+    background-size: 100% 100% !important;
+}
+
 .startCity-CheckInput input::placeholder,
 .startCity-CheckInput span {
     color: #fff !important;
@@ -290,12 +298,21 @@
     background: #a5252580!important;
 }
 
+.startCity-error i {
+    cursor: pointer;
+    width: 15px !important;
+    height: 15px !important;
+    background: url(./pictures/close.svg) no-repeat !important;
+    background-size: 100% 100% !important;
+}
+
+.startCity-error span,
 .startCity-error input {
-    color: #fff;
+    color: #fff !important;
 }
 
 .readOnly {
-    background: rgb(186, 186, 186) !important;
+    background: rgb(218, 218, 218) !important;
 }
 
 .routemenu_search_text {
@@ -355,16 +372,17 @@ p.routemenu_search_text {
 
 .classDiv i {
     cursor: pointer;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 40px;
     background: url(./pictures/close.svg) no-repeat;
-    background-size: 100% 100%;
+    background-size: 15px 15px;
+    background-position: center center;
 }
 
 .classDivMobail i {
     cursor: pointer;
-    width: 17px;
-    height: 17px;
+    width: 13px;
+    height: 12px;
     background: url(./pictures/closeGray.svg) no-repeat;
     background-size: 100% 100%;
 }
