--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -294,9 +294,9 @@
 }
 
 .startCity-error {
-    outline: 2px solid #a5252580 !important;
-    outline-offset: -1px !important;
-    background: #a5252580!important;
+    /* outline: 2px solid #a5252580 !important;
+    outline-offset: -1px !important; */
+    background: #a52525c7!important;
 }
 
 .startCity-error i {
