--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -288,6 +288,7 @@
     background-size: 100% 100% !important;
 }
 
+.startCity-CheckInput input,
 .startCity-CheckInput input::placeholder,
 .startCity-CheckInput span {
     color: #fff !important;
