--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,22 @@ body {
     padding: 0px !important;
 }
 
+.pl-0 {
+    padding-left: 0px !important;
+}
+
+.pr-0 {
+    padding-right: 0px !important;
+}
+
+.pb-0 {
+    padding-bottom: 0px !important;
+}
+
+.pt-0 {
+    padding-top: 0px !important;
+}
+
 @media (min-width: 1200px) {
     .container {
         max-width: 1200px !important;
