--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -180,7 +180,7 @@ html {
     cursor: pointer;
     width: 100%;
     height: 50%;
-    background: url(./pictures/settings.svg) no-repeat;
+    background: url(./pictures/filter.svg) no-repeat;
     background-size: 25px 25px;
     background-position: center center;
     border-top: 1px solid #ccc;
