--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -505,6 +505,9 @@ p.routemenu_search_text {
         background-size: 15px 15px !important;
         background-position: center center !important;
     }
+    .autocomplete-dropdown-container span {
+        font-size: 16px;
+    }
     .addCities,
     .routemenu_footer {
         margin: 0 2px;
