--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -2,6 +2,11 @@
     align-items: center;
     width: 100%;
     border-bottom: 1px solid #ccc;
+    position: sticky !important;
+    background: #fff;
+    z-index: 33;
+    padding-top: 10px !important;
+    top: 0px;
 }
 
 .properties_rightBlock {
