--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -166,15 +166,16 @@ html {
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
 }
 
-.footerMobileIconUp {
+
+/* .footerMobileIconUp {
     display: flex;
     cursor: pointer;
-    width: 100%;
-    height: 50%;
+    width: 30%;
+    height: 100%;
     background: url(./pictures/up-arrow.svg) no-repeat;
     background-size: 20px 30px;
     background-position: center center;
-}
+} */
 
 .footerMobileIconFilter {
     cursor: pointer;
