--- a/src/components/driverProfile/Carousel.css
+++ b/src/components/driverProfile/Carousel.css
@@ -56,7 +56,7 @@
 }
 
 
-/* ScrollBar Bigin */
+/* ScrollBar Begin */
 
 .carouselChoiceHorizontal::-webkit-scrollbar-track,
 .carouselChoice::-webkit-scrollbar-track {
