--- a/src/components/driverProfileRegistration/DriverProfileCalendar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCalendar.css
@@ -1,4 +1,4 @@
-/* CalendarModal Bigin */
+/* CalendarModal Begin */
 
 .calendarModal div {
     width: 100% !important;
@@ -39,7 +39,7 @@
 /* CalendarModal end */
 
 
-/* Dropdown Bigin */
+/* Dropdown Begin */
 
 .dropdownClass {
     border: 1px solid #ccc !important;
@@ -100,7 +100,7 @@
 }
 
 
-/* myPhoneInput Bigin */
+/* myPhoneInput Begin */
 
 .myPhoneInput {
     width: 100%;
