--- a/src/components/driverProfileRegistration/DriverProfileTripSettings.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettings.css
@@ -1,4 +1,4 @@
-/* Navigation page Bigin */
+/* Navigation page Begin */
 
 .driverProfileTripSettingsNavigation {
     min-height: 50px;
@@ -50,7 +50,7 @@
 /* Navigation page End */
 
 
-/* Content Bigin */
+/* Content Begin */
 
 
 /* Content End */
