--- a/src/components/Places/PopularPlaces.css
+++ b/src/components/Places/PopularPlaces.css
@@ -52,7 +52,7 @@
 }
 
 
-/* ScrollBar Bigin */
+/* ScrollBar Begin */
 
 .popularPlacesRender::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
