--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -1,4 +1,4 @@
-/* Car Bigin*/
+/* Car Begin*/
 
 .filledCardBody {
     margin-bottom: 50px;
@@ -232,7 +232,7 @@ p.filledCardInformationNameCarEdit:hover {
 /* Car End*/
 
 
-/* Add new Car Bigin*/
+/* Add new Car Begin*/
 
 .carAddNewCar {
     -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
@@ -316,7 +316,7 @@ img.carPhotoMini {
 }
 
 
-/* ScrollBar Bigin */
+/* ScrollBar Begin */
 
 .carPhotoMiniContainer::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -344,7 +344,8 @@ img.carPhotoMini {
     color: #686868;
     margin-bottom: 0px;
 }
-.labelCarEmpty{
+
+.labelCarEmpty {
     color: #e81123;
     font-weight: 400;
     font-size: 14px;
